--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,9 @@
   
   <!--  Your HTML goes here-->
   <h1>Welcome to WEB 2620!!!!!</h1>
+  <p>
+    Hello, my name is Oscar Nolasco and I am excited for this class!
+  </p>
 
 </body>
 </html>
